salesforce/force-app/main/default/objects/Opportunity/fields/Quote_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Quote_Recipient__c</fullName>
    <label>Quote Recipient</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Renewal Quotes</relationshipLabel>
    <relationshipName>Renewal_Quotes</relationshipName>
</CustomField>