salesforce/force-app/main/default/objects/Opportunity/fields/Renewal_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Synced_At__c</fullName>
    <description>Set by the contract integration on every sync run, even when the renewal date did not change</description>
    <label>Renewal Synced At</label>
    <type>DateTime</type>
</CustomField>